{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 47,
  "lineage": "f2dabbb5-a198-3945-6f78-76e1e739a824",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_besu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30303",
                  "8545",
                  "8546",
                  "80",
                  "8080",
                  "9545",
                  "9546"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-03-19T23:13:23.833-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/caliperbesu-417220/global/firewalls/allow-besu",
            "log_config": [],
            "name": "allow-besu",
            "network": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/networks/main",
            "priority": 1000,
            "project": "caliperbesu-417220",
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/firewalls/allow-besu",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "blockchain"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_besu_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30303",
                  "8545",
                  "8546",
                  "80",
                  "8080",
                  "9545",
                  "9546"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-03-19T23:13:23.826-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/caliperbesu-417220/global/firewalls/allow-besu-udp",
            "log_config": [],
            "name": "allow-besu-udp",
            "network": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/networks/main",
            "priority": 1000,
            "project": "caliperbesu-417220",
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/firewalls/allow-besu-udp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/disks/worker-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliperbesu-417220/zones/us-central1-a/instances/worker-0",
            "instance_id": "3909266759082295403",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "CPPhVKWsaO0=",
            "name": "worker-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.27.239.0",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/networks/main",
                "network_ip": "10.0.65.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliperbesu-417220"
              }
            ],
            "project": "caliperbesu-417220",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/instances/worker-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/disks/worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliperbesu-417220/zones/us-central1-a/instances/worker-1",
            "instance_id": "48477977617875051",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "CPPhVKWsaO0=",
            "name": "worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.222.5.72",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/networks/main",
                "network_ip": "10.0.65.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliperbesu-417220"
              }
            ],
            "project": "caliperbesu-417220",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/instances/worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/disks/worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliperbesu-417220/zones/us-central1-a/instances/worker-2",
            "instance_id": "2503973534508236907",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "CPPhVKWsaO0=",
            "name": "worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.28.87.20",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/networks/main",
                "network_ip": "10.0.65.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliperbesu-417220"
              }
            ],
            "project": "caliperbesu-417220",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/instances/worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          }
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/disks/worker-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliperbesu-417220/zones/us-central1-a/instances/worker-3",
            "instance_id": "4017491435201216619",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "CPPhVKWsaO0=",
            "name": "worker-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.225.38.11",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/global/networks/main",
                "network_ip": "10.0.65.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliperbesu-417220"
              }
            ],
            "project": "caliperbesu-417220",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliperbesu-417220/zones/us-central1-a/instances/worker-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}